--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/entry.css">
     <title>Admin signin</title>
 </head>
-<body>
+<body class="concertBackgroundImage">
     <div class="container admin_container" id="container">
         <div class="form-container sign-in-container admin_container">
             <form action="admin-sign-in" method="POST">
