--- a/templates/user_entry.html
+++ b/templates/user_entry.html
@@ -7,7 +7,7 @@
     <script src = "../static/entry.js"></script>
     <title>User signin/signup</title>
 </head>
-<body>
+<body class="concertBackgroundImage">
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="user-sign-up" method="POST">
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="footer">
-        <a href="../../creator" target="_blank"><b>Are you a creator?</b></a>
+        <a href="../../creator" target="_blank"><b class="lightColorText">Are you a creator?</b></a>
     </div>
 </body>
 </html>
