--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -10,7 +10,8 @@
     <div class="container admin_container" id="container">
         <div class="form-container sign-in-container admin_container">
             <form action="admin-sign-in" method="POST">
-                <h1>Sign in</h1>
+                <img class="logoImg" src="../static/roovy_light_with_name.png">
+                <h1>Admin</h1>
                 <input name="email" type="email" placeholder="Email" />
                 <input name="password" type="password" placeholder="Password" />
                 <button>Sign In</button>
