--- a/templates/user_entry.html
+++ b/templates/user_entry.html
@@ -11,6 +11,7 @@
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="user-sign-up" method="POST">
+                <img class="logoImg" src="../static/roovy_light_with_name.png">
                 <h1>Create Account</h1>
                 <input name="name"  type="text" placeholder="Name" />
                 <input name="email" type="email" placeholder="Email" />
@@ -20,6 +21,7 @@
         </div>
         <div class="form-container sign-in-container">
             <form action="user-sign-in" method="POST">
+                <img class="logoImg" src="../static/roovy_light_with_name.png">
                 <h1>Sign in</h1>
                 <input name="email" type="email" placeholder="Email" />
                 <input name="password" type="password" placeholder="Password" />
