--- a/templates/parent_frame.html
+++ b/templates/parent_frame.html
@@ -4,458 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/parent_frame.css">
+    <script src="../static/parent_frame.js"></script>
     <title>Music App</title>
-    <style>
-        a{
-            text-decoration: none;
-            color:#333;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #f0f0f0;
-        }
-
-        #navbar {
-            width: 200px;
-            height: 100%;
-            background-color: #333;
-            color: #fff;
-            position: fixed;
-            top: 0;
-            left: 0;
-            padding-top: 20px;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        #navbar a {
-            text-decoration: none;
-            color: #fff;
-            padding: 10px;
-            width: 100%;
-            box-sizing: border-box;
-            text-align: center;
-            border-bottom: 1px solid #444;
-        }
-        #navbar > .first{
-            margin-top:20px;
-            border-top: 1px solid #444;
-        }
-        #navbar a:hover {
-            background-color: #555;
-        }
-        #navbar h6{
-            margin-top:-20px;
-        }
-
-        #main {
-            margin-left: 200px;
-            padding: 20px;
-        }
-
-
-        #header {
-            display: flex;
-            justify-content:space-between;
-            align-items: center;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            top: 0;
-            right: 0;
-            left: 200px;
-        }
-
-        #headerRight{
-            display: flex;
-            justify-content:flex-end;
-            align-items: center;
-            padding: 10px;
-        }
-
-        #headerLeft{
-            display: flex;
-            justify-content:flex-start;
-            align-items: center;
-            padding: 10px;
-            font-size:22px;
-            font-weight:600px;
-        }
-
-        #profile {
-            margin-right: 20px;
-            cursor: pointer;
-        }
-
-        #search {
-            padding:5px;
-            margin-right: 20px;
-            cursor: pointer;
-            color: #fff;
-        }
-
-        #search:hover{
-            text-shadow: 2px 2px;
-        }
-
-        #searchBar {
-            width: 150px;
-            padding: 8px;
-            border: none;
-            border-bottom: 1px solid #ccc;
-            outline: none;
-            margin-right:5px;
-        }
-
-        #logOut{
-            cursor: pointer;
-        }
-
-        #mainContent {
-            margin-top: 40px;
-            overflow: scroll;
-            height: 80vh;
-        }
-
-        .addToPlaylistBtn {
-            padding: 8px;
-            margin-right: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .playlistDropdown {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .playlistDropdown.show {
-            display: block;
-        }
-
-        .playlistItem {
-            padding: 12px;
-            cursor: pointer;
-        }
-
-        .playBtn {
-            padding: 8px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .songRating{
-            margin-right:20px;
-        }
-
-
-        .creatorInNav{
-            position:absolute;
-            bottom:18px;
-        }
-
-        .banner{
-            height:40vh;
-        }
-
-        #currentView{
-            float:left;
-        }
-
-        #player {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            background-color: #333;
-            color: #fff;
-            position: fixed;
-            bottom: 0;
-            left:200px;
-            right:0;
-            height:50px;
-            padding: 10px;
-            border-left: 2px solid #444;
-        }
-
-        #volumeControl,
-        #playPause,
-        #expand {
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        .album {
-            display: flex;
-            border: 1px solid #ccc;
-            margin: 10px;
-            padding: 10px;
-            background-color: #f9f9f9;
-        }
-
-        .album img {
-            width: 150px;
-            margin-right: 10px;
-             object-fit: cover;
-        }
-
-        .albumDetails {
-            margin-left:30px;
-        }
-
-        .albumDetails h2 {
-            margin-bottom: 5px;
-        }
-
-        .albumDetails p {
-            margin:5px;
-            color: #555;
-        }
-
-        .album a, .album button {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 5px 10px;
-            background-color: #007BFF;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .album a:hover, .album button:hover {
-            background-color: #0056b3;
-        }
-
-        .song {
-            padding: 15px;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            position:relative;
-            height:100px;
-        }
-
-        .song .songThumbnail img {
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            margin-right:20px;
-        }
-
-        .song .songDetails {
-           display:flex;
-           padding: 2px 5px;
-           justify-content:space-between;
-           width:50%;
-        }
-
-        .song .songName {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 5px;
-            padding:10px 5px;
-        }
-
-        .song .songInfo {
-            font-size: 14px;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-
-        .songInfo p {
-            margin-right: 25px;
-        }
-
-        .song .songActions {
-            display: flex;
-            align-items: center;
-            width: 40%;
-        }
-
-        .song .playBtn {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 4px;
-            width:35%;
-        }
-
-        .song .editBtn {
-            background-color: #008CBA;
-            color: white;
-            border: none;
-            padding: 10px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-left: 10px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .songActions {
-            display: flex;
-            align-items: center;
-            justify-content:space-between;
-        }
-
-
-        #addPlaylistBtn {
-            cursor: pointer;
-        }
-
-        #addPlaylistForm label, #addPlaylistForm input {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .playlist {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-top: 20px;
-        }
-
-        .playlist h2 {
-            margin: 0;
-            padding-bottom: 5px;
-        }
-
-        .playlist a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-
-        .playlist a:hover {
-            text-decoration: underline;
-        }
-
-        .editSong {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .editSong form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .editSong div {
-            margin-bottom: 15px;
-        }
-
-        .editSong label {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        .editSong input,
-        .editSong select {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-
-        .editSong button {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .editSong button:hover {
-            background-color: #45a049;
-        }
-
-        .editSong p {
-            margin-top: 10px;
-        }
-
-        .editAlbum {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .editAlbum form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .editAlbum div {
-            margin-bottom: 15px;
-        }
-
-        .editAlbum label {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        .editAlbum input,
-        .editAlbum select {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-
-        .editAlbum button {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .editAlbum button:hover {
-            background-color: #45a049;
-        }
-
-        .editAlbum p {
-            margin-top: 10px;
-        }
-
-        a.delete-link {
-            color: #d9534f;
-            text-decoration: none;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        a.delete-link:hover {
-            text-decoration: underline;
-        }
-
-
-    </style>
 </head>
 <body>
 
@@ -485,10 +36,11 @@ True
 </div>
 
 <div id="player">
-    <div id="volumeControl">&#128266;</div>
-    <div id="currentSong">{{ current_song }}</div>
-    <div id="playPause">&#9654;</div>
-    <div id="expand">&#9650;</div>
+    <audio id="audioPlayer" controls>
+        <source src="" type="audio/mpeg">
+    </audio>
+    <div id="expand" onclick="togglePlayerHeight()">&#171;</div>
+    <div id="playerContent"></div>
 </div>
 
 </body>
