--- a/templates/edit_song.html
+++ b/templates/edit_song.html
@@ -27,8 +27,8 @@
         <div>
             <label for="album_id">Album ID:</label>
             <select id="album_id" name="album_id" required>
-                {% for album_id, album_name in album_choices %}
-                <option value="{{ album_id }}" {% if song.album_id== album_id %}selected{% endif %}>{{ album_name }}
+                {% for album in album_choices %}
+                <option value="{{ album_id }}" {% if song.album_id== album[0] %}selected{% endif %}>{{ album[1] }}
                 </option>
                 {% endfor %}
             </select>
